--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "babel-loader": "^8.1.0",
     "materialize-css": "^1.0.0-rc.2",
+    "proxy": "^1.0.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-hooks-lib": "^0.3.0",
