--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "author": "",
   "license": "ISC",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.2",
