--- a/client/package.json
+++ b/client/package.json
@@ -23,10 +23,11 @@
     "react-dom": "^16.4.1",
     "react-hooks-lib": "^0.3.0",
     "react-materialize": "^3.9.3",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.2",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
