--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "config": "^3.3.2",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.10.11",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "babel-plugin-react-bootstrap": "0.0.2",
